Compiler/tests/typing2/good/testfile-ownership-2.rs

fn take(v: Vec<i32>) -> Vec<i32> {
    v
}
fn main() {
    let v = vec![1, 2, 3];
    let v2 = take(v);
    let x = v2[0];
}
