Compiler/tests/typing2/bad/testfile-ownership-2.rs

fn take(v: Vec<i32>) {
}
fn main() {
    let v = vec![1, 2, 3];
    take(v);
    let x = v[0];
}
